Fix Join Page spacing, and package.json sweet alert

--- a/src/client/hrmis/src/views/rsp_module/recruitment/join_page/_join_page.scss
+++ b/src/client/hrmis/src/views/rsp_module/recruitment/join_page/_join_page.scss
@@ -2,7 +2,7 @@
 	width: auto;
 	display: flex;
 	flex-direction: row;
-	padding: 3rem 2rem;
+	padding: 5rem 2rem;
 	.join-info {
 		width: 30%;
 		padding: 0rem 1rem;
@@ -154,7 +154,7 @@
 @media only screen and (max-width: 768px) {
 	.join-page-body {
 		flex-direction: column;
-		padding: 2rem 2rem;
+		padding: 5rem 2rem;
 		.join-info {
 			width: auto;
 			p {
